--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 
 body {
   background-image: url("../images/pattern-background-desktop.svg");
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   background-color: hsl(225, 100%, 94%);
   font-family: "Red Hat Display", sans-serif;
   font-size: 16px;
