--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
 
 body {
   background-image: url("../images/pattern-background-desktop.svg");
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   background-color: $pale-blue;
   font-family: $font-main;
   font-size: 16px;
